@@ -142,24 +142,10 @@ jib {
         args = ["run"]
         environment = [
                 'JAVA_MAIN_CLASS': 'ru.nyrk.admin.AdminApplication',
-                'JAVA_OPTIONS'   : ["-XX:+UnlockExperimentalVMOptions",
-                                    "-XX:+UseZGC",
-                                    "-Xmx256m",
-                                    "-Xlog:gc",
-                                    "-Djava.security.egd=file:/dev/./urandom",
-                                    "-XX:+UnlockDiagnosticVMOptions"]
-                        .join(' ')
         ]
         workingDirectory = "/app"
         ports = ['9999']
         labels = ['app': 'admin']
         user = "1001"
-    }
-    extraDirectories {
-        paths = ["${rootProject.projectDir}/jib"]
-        permissions = [
-                '/app/run-java.sh': '755',
-                '/app/run-env.sh' : '755',
-        ]
     }
 }
